# RSS-Client

./: README.md
rss-client/: README.md  angular.json  package-lock.json  package.json
rss-client/src/app/: app.component.spec.ts  app.component.ts
rss-server/: Cargo.toml
rss-server/src/: main.rs
